overflow FIXED

--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -1,5 +1,4 @@
 .banner {
-  display: none;
   padding: 3rem 0;
   color: #6a23e6;
   background-color: #fff;
